GT-13 Добавил таблицу

--- a/features/graph/src/main/res/layout/activity_graph.xml
+++ b/features/graph/src/main/res/layout/activity_graph.xml
@@ -9,19 +9,10 @@
             type="com.buchatskij.graphtest.main.presentation.GraphViewModel" />
     </data>
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/activity_graph_list"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
 
-        <com.github.mikephil.charting.charts.LineChart
-            android:id="@+id/chart"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:lineChartData="@{viewModel.points}" />
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
