--- a/features/graph/src/main/res/layout/header_item.xml
+++ b/features/graph/src/main/res/layout/header_item.xml
@@ -2,18 +2,22 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:background="@drawable/bottom_border"
     android:orientation="horizontal">
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:text="@string/x_axis_name" />
+        android:background="@drawable/right_border"
+        android:text="@string/x_axis_name"
+        android:textAlignment="center" />
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:text="@string/y_axis_name" />
+        android:text="@string/y_axis_name"
+        android:textAlignment="center" />
 
 </LinearLayout>
