--- a/features/graph/src/main/res/layout/activity_graph.xml
+++ b/features/graph/src/main/res/layout/activity_graph.xml
@@ -4,15 +4,40 @@
 
     <data>
 
+        <import type="com.buchatskij.graphtest.uicommon.UiState" />
+
+        <import type="android.view.View" />
+
         <variable
             name="viewModel"
             type="com.buchatskij.graphtest.main.presentation.GraphViewModel" />
     </data>
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/activity_graph_list"
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
+        android:layout_height="match_parent">
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/activity_graph_list"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:visibility="@{viewModel.uiState == UiState.CONTENT}" />
+
+        <include
+            layout="@layout/component_progress"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:visible="@{viewModel.uiState == UiState.PROGRESS}" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </layout>
